--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
                 <form action="login.php" method="post" autocomplete="on">
                     <div class="campo">
-                        <i class="material-symbols-outlined">face</i>
+                        <i class="material-symbols-outlined">person</i>
                         <input type="email" name="login" id="ilogin" placeholder="seu e-mail" autocomplete="email" required maxlength="30">
                         <label for="ilogin">Login</label>
                     </div>
@@ -31,7 +31,7 @@
                         <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.html">
+                    <a href="esqueci.html" class="button">
                         Esqueci a Senha <i class="material-symbols-outlined">mail</i>
                     </a>
                 </form>
